tests/testdata/errors/division_by_zero.pine
// Test division by zero - should fail

var x = 10 / 0

// Expected error: Division by zero
